feat: 利用者の詳細取得を追加
